src/trusted/validator_arm/testdata/bad/invalid_branch.hex
# Example of an invalid branch, because the BIC doesn't do the right thing.
e1c12263
e12fff15
